Arquivo de dialogo renomeado para apenas Dialog, pois esse component usa o messageDialog que traz look end feel desktop e IOS

--- a/qml.qrc
+++ b/qml.qrc
@@ -19,9 +19,9 @@
         <file>qml/CustomRadioButton.qml</file>
         <file>qml/CustomTextField.qml</file>
         <file>qml/Datepicker.qml</file>
+        <file>qml/Dialog.qml</file>
         <file>qml/EulaAgreement.qml</file>
         <file>qml/FloatingButton.qml</file>
-        <file>qml/IOSDialog.qml</file>
         <file>qml/ListenersLoader.qml</file>
         <file>qml/ListItem.qml</file>
         <file>qml/Main.qml</file>
