Atualizado definição das cores nativas no android e adicionado os arquivos xml do android/res no .pro

--- a/android/res/values/colors.xml
+++ b/android/res/values/colors.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorAccent">#91ff44</color>
-    <color name="colorPrimary">#2c576c</color>
+    <color name="colorBackground">#ffffff</color>
     <color name="colorControlActivated">#2c576c</color>
+    <color name="colorControlHighlight">#2c576c</color>
+    <color name="colorPrimary">#2c576c</color>
     <color name="colorPrimaryDark">#3b3b3b</color>
+    <color name="textColor">#f80000</color>
     <color name="textColorPrimary">#2c576c</color>
     <color name="statusBarColor">#2c576c</color>
 </resources>
