--- a/android/res/values/styles.xml
+++ b/android/res/values/styles.xml
@@ -2,13 +2,13 @@
 <resources>
     <style name="AppTheme" parent="Theme.AppCompat">
         <item name="android:windowDisablePreview">true</item>
-        <item name="android:colorBackground">@color/colorPrimary</item>
-        <item name="android:colorControlActivated">@color/colorPrimary</item>
-        <item name="android:colorControlHighlight">@color/colorPrimary</item>
+        <item name="android:colorBackground">@color/colorBackground</item>
+        <item name="android:colorControlActivated">@color/colorControlActivated</item>
+        <item name="android:colorControlHighlight">@color/colorControlHighlight</item>
         <item name="android:colorAccent">@color/colorAccent</item>
         <item name="android:colorPrimary">@color/colorPrimary</item>
         <item name="android:colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="android:textColor">@color/textColorPrimary</item>
+        <item name="android:textColor">@color/textColor</item>
         <item name="android:textColorPrimary">@color/textColorPrimary</item>
         <item name="android:statusBarColor">@color/statusBarColor</item>
         <item name="android:windowActionModeOverlay">true</item>
