Corrigido formato da imagem

--- a/images/images.qrc
+++ b/images/images.qrc
@@ -1,6 +1,6 @@
 <RCC>
     <qresource>
-        <file>app_drawer.png</file>
+        <file>app_drawer.jpg</file>
         <file>app_icon.png</file>
         <file>app_icon_transparent.png</file>
         <file>default_user_image.svg</file>
